# zero2prod

./: Cargo.toml  Dockerfile  README.md  README.org  docker-compose.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: code_quality.yaml
configurations/: default.yaml  testing.yaml
migrations/: 20220325213546_create_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs
src/public/: mod.rs  routes.rs
tests/: health_check.rs
tests/public/: routes.rs
