[package]
name = "zero2prod"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tide = "0.16.0"
tide-sqlx = "0.6.1"
tide-testing = "0.1.3"
config = "0.12.0"
log = "0.4.16"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
